@startuml

title __FRAMEWORK's Class Diagram__\n

  namespace enstabretagne.travaux_diriges.TD_corrige.EngineSimple.Framework {
    abstract class enstabretagne.travaux_diriges.TD_corrige.EngineSimple.Framework.EntiteSimulee {
        + EntiteSimulee()
        {abstract} + Init()
        + Now()
        + Post()
    }
  }
  

  namespace enstabretagne.travaux_diriges.TD_corrige.EngineSimple.Framework {
    abstract class enstabretagne.travaux_diriges.TD_corrige.EngineSimple.Framework.SimEvent {
        + SimEvent()
        + compareTo()
        {abstract} + process()
        # getDateOccurence()
        # rescheduleAt()
    }
  }
  

  namespace enstabretagne.travaux_diriges.TD_corrige.EngineSimple.Framework {
    class enstabretagne.travaux_diriges.TD_corrige.EngineSimple.Framework.SimuEngine {
        # mesEntitesSimulees : List<EntiteSimulee>
        - echeancier : SortedList<SimEvent>
        + SimuEngine()
        + initSimulation()
        + simulate()
        # Post()
        # getCurrentDate()
        - hasANextEvent()
    }
  }
  

  enstabretagne.travaux_diriges.TD_corrige.EngineSimple.Framework.EntiteSimulee o-- enstabretagne.travaux_diriges.TD_corrige.EngineSimple.Framework.SimuEngine : engine
  enstabretagne.travaux_diriges.TD_corrige.EngineSimple.Framework.SimEvent .up.|> java.lang.Comparable
  enstabretagne.travaux_diriges.TD_corrige.EngineSimple.Framework.SimEvent o-- enstabretagne.travaux_diriges.TD_corrige.EngineSimple.Framework.EntiteSimulee : entitePorteuseEvenement
  enstabretagne.travaux_diriges.TD_corrige.EngineSimple.Framework.SimEvent o-- enstabretagne.base.time.LogicalDateTime : d
  enstabretagne.travaux_diriges.TD_corrige.EngineSimple.Framework.SimuEngine o-- enstabretagne.base.time.LogicalDateTime : currentDate
  enstabretagne.travaux_diriges.TD_corrige.EngineSimple.Framework.SimuEngine o-- enstabretagne.base.time.LogicalDateTime : end
  enstabretagne.travaux_diriges.TD_corrige.EngineSimple.Framework.SimuEngine o-- enstabretagne.base.time.LogicalDateTime : start


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
